Downloaded ACS demographic data

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 NC-Precinct-Model.NC-House.votes.geojson
 NC-Precinct-Model.NC-Senate.votes.geojson
 NC-Precinct-Model.US-House.votes.geojson
+ACS-temp
 
 
 
