Removed old precinct model data files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-NC-Precinct-Model.NC-House.votes.geojson
-NC-Precinct-Model.NC-Senate.votes.geojson
-NC-Precinct-Model.US-House.votes.geojson
+NC-District-Model.votes.geojson
 ACS-temp
 
 
